--- a/insert_julia_skjalid.ipynb
+++ b/insert_julia_skjalid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,9 @@
     "    OR (fd.attribute1 = 'Áfallin staða %')\n",
     "    OR (fd.attribute1 = 'Framtíðarstaða')\n",
     "    OR (fd.attribute1 = 'Áætlaðar launagr.' AND fd.attribute2 ='Karlar')\n",
-    "    OR (fd.attribute1 = 'Samtals sjóðfélagar');\n",
+    "    OR (fd.attribute1 = 'Samtals sjóðfélagar')\n",
+    "    OR (fd.attribute1 = 'Kennitölur' AND fd.attribute2 = 'Fjárfestingargjöld (bein og áætluð/reiknuð)' AND fd.attribute3 = 'Umsýsluþóknanir vegna útvistunar eignastýringar')\n",
+    "    OR (fd.attribute1 = 'Kennitölur' AND fd.attribute2 = 'Áætluð umsýsluþóknun alls');\n",
     "\n",
     "\n",
     "\n",
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +317,7 @@
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. Fél. ísl. stjstarfsm. á Keflvflugvelli','Lífeyrissj. Félag starfsmanna á Kef flugvelli','Lífeyrissj.*ísl.*stjst.* á Kefl.{0,1}v.{0,4}flugv.*');\n",
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. Neskaupstaðar','Lífeyrissj. Neskaupstaðar','.*((\\\\.|\\\\s)Nes(-|)kaup).*(\\\\.|staðar)');\n",
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. stm. Húsavíkurk.','Lífeyrissj. Húsavíkurkaupstaðar','.*(Húsa(-|-\\\\s|)víkur(k|k\\\\.|-|))(\\\\.|aupstaðar|bæjar|).*');\n",
-    "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. stm. Reykjavíkur apóteks','Lífeyrissj. Reykjavíkurapóteks','.*Lífeyris(-|)(sj\\\\.|sjóður )(\\\\s|)(stm\\\\.|starfsm\\\\.|starfsmanna)\\\\sR(eykjavíkur|vík\\\\.)(-|-\\\\s|\\\\s|)apóteks.*');\n",
+    "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. stm. Reykjavíkurapóteks','Lífeyrissj. Reykjavíkurapóteks','.*Lífeyris(-|)(sj\\\\.|sjóður )(\\\\s|)(stm\\\\.|starfsm\\\\.|starfsmanna)\\\\sR(eykjavíkur|vík\\\\.)(-|-\\\\s|\\\\s|)apóteks.*');\n",
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. stm. Vestm.eyjab.','Lífeyrissj. Vestmannaeyjabæjar','Lífeyrissj(\\\\.|óður\\\\s)(\\\\s|)(stm|starfsmanna|starfsm\\\\.)(\\\\.\\\\s|\\\\s|)Vestm.*eyja(\\\\s|b\\\\.|bæjar|-bæjar)');\n",
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. arkitekta og tæknifr.','Lífeyrissj. Arkitekta og tæknifræðinga','.*(A|a)rkitekta.*(T|t)æknifr.*');\n",
     "INSERT INTO public.fund(fund_name, short_name, regex_keyword)VALUES ('Lífeyrissj. K.E.A.','K.E.A','.*K\\\\.E\\\\.A\\\\..*');\n",
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
