--- a/insert_julia_skjalid.ipynb
+++ b/insert_julia_skjalid.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reset á gagnagrunninum : 0×5 DataFrame\n",
-      " Row │ attribute1  attribute2  attribute3  attribute4  occurs in\n",
-      "     │ String?     String?     String?     String?     Abstract…?\n",
-      "─────┴────────────────────────────────────────────────────────────\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "NOTICE:  view \"useful_combinations_view\" does not exist, skipping\n"
+      "Reset á gagnagrunninum : 0×0 DataFrame\n"
      ]
     }
    ],
@@ -36,7 +26,10 @@
     "\n",
     "conn = LibPQ.Connection(\"dbname=Symmetria user=$username password=$password\")\n",
     "\n",
-    "sql_string = \"DROP VIEW IF EXISTS useful_combinations_view;\n",
+    "sql_string = \"\n",
+    "DROP VIEW IF EXISTS total_fund_data;\n",
+    "DROP VIEW IF EXISTS main_fund_data;\n",
+    "DROP VIEW IF EXISTS useful_combinations_view;\n",
     "DROP TABLE IF EXISTS fund,funddata, fundhistory, actions, subfund, fund;\n",
     "\n",
     "CREATE TABLE fund (\n",
@@ -84,20 +77,10 @@
     ");\n",
     "\n",
     "\n",
-    "/*\n",
-    "CREATE TABLE subfundhistory (\n",
-    "  id SERIAL PRIMARY KEY,\n",
-    "  origin_id INTEGER NOT NULL REFERENCES subfund (subfund_id),\n",
-    "  destination_id INTEGER NOT NULL REFERENCES subfund (subfund_id),\n",
-    "  date TIMESTAMP NOT NULL,\n",
-    "  action_type TEXT NOT NULL REFERENCES actions (actiontype)\n",
-    ");\n",
-    "*/\n",
-    "\n",
     "\n",
     "----- VIEWIÐ\n",
     "----- VIEWIÐ\n",
-    "DROP VIEW IF EXISTS useful_combinations_view;\n",
+    "\n",
     "CREATE VIEW useful_combinations_view AS\n",
     "SELECT\n",
     "    f.fund_id AS fund_id,\n",
@@ -250,6 +233,63 @@
     "\n",
     "\n",
     "---\n",
+    "\n",
+    "create view main_fund_data\n",
+    "as\n",
+    "select cast(left(date,4) as int) as yr,fund_id,fund_name,subfund_id,\n",
+    "\tsubfund_name, subfund_type,\n",
+    "\tmax(CASE WHEN attribute1 = 'Efnahagsreikningur' and attribute2 = 'Eignir' THEN coalesce(value,0) ELSE null END) as total_assets,\n",
+    "\tmax(CASE WHEN attribute1 = 'Rekstur' and attribute2 = 'Iðgjöld' THEN coalesce(value,0) ELSE null END) as contributions,\n",
+    "\tmax(CASE WHEN attribute1 = 'Rekstur' and attribute2 = 'Lífeyrir' THEN coalesce(value,0) ELSE null END) as pensions,\n",
+    "\tmax(CASE WHEN attribute1 = 'Rekstur' and attribute2 = 'Rekstrarkostnaður' THEN coalesce(value,0) ELSE null END) as office_cost,\n",
+    "\tmax(CASE WHEN attribute1 = 'Rekstur' and attribute2 = 'Fjárfestingargjöld' THEN coalesce(value,0) ELSE null END) as investment_fees,\n",
+    "\tsum(CASE WHEN attribute1 = 'Rekstur' and attribute2 in ('Rekstrarkostnaður','Fjárfestingargjöld') THEN coalesce(value,0) ELSE null END) as total_cost,\n",
+    "\tmax(CASE WHEN attribute1 = 'Heildarstaða %' THEN coalesce(value,0) ELSE null END) as surplus_ratio,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Hrein raunávöxtun (%)' THEN coalesce(value,0) ELSE null END) as real_return,\n",
+    "\tmax(CASE WHEN attribute1 = 'Samtals sjóðfélagar' THEN coalesce(value,0) ELSE null END) as member_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Virkir sjóðfélagar' THEN coalesce(value,0) ELSE null END) as active_member_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Lífeyrisþegar' and attribute2 = 'Elli' THEN coalesce(value,0) ELSE null END) as old_age_benefit_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Lífeyrisþegar' and attribute2 = 'Örorku' THEN coalesce(value,0) ELSE null END) as disability_benefit_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Lífeyrisþegar' and attribute2 = 'Maka' THEN coalesce(value,0) ELSE null END) as spouse_benefit_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Lífeyrisþegar' and attribute2 = 'Barna' THEN coalesce(value,0) ELSE null END) as child_benefit_count,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Ellilífeyrir (%)' THEN coalesce(value,0) ELSE null END) as old_age_benefit_percentage,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Örorkulífeyrir (%)' THEN coalesce(value,0) ELSE null END) as disability_benefit_percentage,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Makalífeyrir (%)' THEN coalesce(value,0) ELSE null END) as spouse_benefit_percentage,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Barnalífeyrir (%)' THEN coalesce(value,0) ELSE null END) as child_benefit_percentage,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Lífeyrisbyrði' THEN coalesce(value,0) ELSE null END) as liquidity_ratio,\n",
+    "\tmax(CASE WHEN attribute1 = 'Kennitölur' and attribute2 = 'Stöðugildi' THEN coalesce(value,0) ELSE null END) as employee_count\n",
+    "from useful_combinations_view\n",
+    "group by cast(left(date,4) as int),fund_id,fund_name,subfund_id,subfund_name, subfund_type;\n",
+    "\n",
+    "\n",
+    "create view total_fund_data\n",
+    "as\n",
+    "select yr,subfund_type,\n",
+    "\tsum(total_assets) as total_assets,\n",
+    "\tsum(contributions) as total_contributions,\n",
+    "\tsum(pensions) as total_pensions,\n",
+    "\tsum(office_cost) as total_office_cost,\n",
+    "\tsum(investment_fees) as total_investment_fees,\n",
+    "\tsum(total_cost) as total_cost,\n",
+    "\tsum(surplus_ratio*total_assets)/sum(total_assets) as total_surplus_ratio,\n",
+    "\tsum(real_return*total_assets)/sum(total_assets) as total_real_return,\n",
+    "\tsum(member_count) as total_member_count,\n",
+    "\tsum(active_member_count) as total_active_member_count,\n",
+    "\tsum(old_age_benefit_count) as total_old_age_benefit_count,\n",
+    "\tsum(disability_benefit_count) as total_disability_benefit_count,\n",
+    "\tsum(spouse_benefit_count) as total_spouse_benefit_count,\n",
+    "\tsum(child_benefit_count) as total_child_benefit_count,\n",
+    "\tsum(old_age_benefit_percentage*pensions)/sum(pensions) as total_old_age_benefit_percentage,\n",
+    "\tsum(disability_benefit_percentage*pensions)/sum(pensions) as total_disability_benefit_percentage,\n",
+    "\tsum(spouse_benefit_percentage*pensions)/sum(pensions) as total_spouse_benefit_percentage,\n",
+    "\tsum(child_benefit_percentage*pensions)/sum(pensions) as total_child_benefit_percentage,\n",
+    "\tsum(pensions)/sum(contributions) as total_liquidity_ratio,\n",
+    "\tsum(employee_count) as total_employee_count\n",
+    "from main_fund_data\n",
+    "Group by yr,subfund_type\n",
+    "order by yr;\n",
+    "\n",
+    "\n",
     "\"\n",
     "result = execute(conn,sql_string) |> DataFrame\n",
     "println(\"Reset á gagnagrunninum : $result\")   "
@@ -257,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -618,7 +658,7 @@
       "sam er buid að inserta inní funddata\n",
       "ser er buid að inserta inní funddata\n",
       "hluti 3 er buid að inserta inní funddata\n",
-      "Fjöldi null sem ég fann = 4064\n"
+      "Fjöldi null sem ég fann = 4031\n"
      ]
     }
    ],
@@ -907,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
